--- a/download.html
+++ b/download.html
@@ -76,7 +76,7 @@
                 <div class="download-card">
                     <p>Versione del gioco 1.0.0</p>
                     <p>Dimensione del file: 2.3 GB</p>
-                    <a href="#" class="btn download-btn" onclick="alert('Download iniziato per Windows!')">Scarica per Windows</a>
+                    <a href="https://raw.githubusercontent.com/Bit-Logics/Relativion/main/RelativionSetup.exe" class="btn download-btn">Scarica per Windows</a>
                 </div>
 
 
