--- a/download.html
+++ b/download.html
@@ -75,7 +75,8 @@
 
                 <div class="download-card">
                     <p>Versione del gioco 1.0.0</p>
-                    <p>Dimensione del setup: 80.6 MB | Dimensione del gioco: 271 MB</p>
+                    <p>Dimensione del setup: 80.6 MB</p>
+                    <p>Dimensione del gioco: 271 MB</p>
                     <a href="https://raw.githubusercontent.com/Bit-Logics/Relativion/main/RelativionSetup.exe" class="btn download-btn" download>Scarica per Windows</a>
                 </div>
 
